<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_upload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#e3000000"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$MyFragment">

    <TextView
        android:id="@+id/extra_padding_space"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <!--Title of Story input-->
    <EditText
        android:id="@+id/title_story"
        android:layout_below="@+id/extra_padding_space"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="start"
        android:inputType="text"
        android:hint="@string/post_title"
        android:textColorHint="#c8ffffff"
        android:textColor="#c8ffffff"
        />

    <!--Upload Button-->
    <Button
        android:id="@+id/upload_story"
        android:background="#ff33b5e5"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_below="@+id/extra_padding_space"
        android:layout_toRightOf="@+id/title_story"
        android:layout_toEndOf="@+id/title_story"
        android:text="@string/upload"
        android:textColor="#ffffff"
        android:textSize="14sp"/>


    <!--Content of story-->
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:id="@+id/story_text"
        android:background="#FFFFFF"
        android:gravity="top|start"
        android:layout_below="@+id/title_story"
        android:layout_marginTop="40dp"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/space_filler"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="15dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--Enter location-->
    <TextView
        android:id="@+id/enter_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_location"
        android:textColor="#ffffff"
        android:layout_below="@+id/space_filler"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/story_upload_location"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:layout_below="@+id/enter_location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

</RelativeLayout>
