<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#CCFFCC"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$MyFragment">

    <EditText
        android:id="@+id/title_image"
        android:layout_alignParentTop="true"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/title"
        android:gravity="start"
        android:inputType="text" />
    <Button
        android:id="@+id/upload_image"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_toRightOf="@+id/title_image"
        android:text="@string/upload"
        android:textSize="14sp"/>


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/camera"
        android:id="@+id/picture"
        android:layout_below="@+id/title_image"
        android:layout_above="@+id/caption_image"
        />

    <EditText
        android:id="@+id/caption_image"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:text="@string/caption"
        android:gravity="start"
        android:inputType="text"
        android:padding="15dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/enter_tag_picture"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:gravity="start"
        android:inputType="text"
        android:layout_below="@+id/caption_image" />

    <EditText
        android:id="@+id/image_upload_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_tag_picture"
        android:text="Enter Location" />

    <!--<EditText-->
        <!--android:id="@+id/enter_building_picture"-->
        <!--android:layout_width="165dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/building_prompt"-->
        <!--android:gravity="start"-->
        <!--android:inputType="text"-->
        <!--android:layout_below="@+id/enter_tag_picture" />-->

    <!--<EditText-->
        <!--android:id="@+id/enter_floor_picture"-->
        <!--android:layout_width="78dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/floor_prompt"-->
        <!--android:gravity="start"-->
        <!--android:inputType="text"-->
        <!--android:layout_below="@+id/enter_tag_picture"-->
        <!--android:layout_toRightOf="@+id/enter_building_picture" />-->

    <!--<EditText-->
        <!--android:id="@+id/enter_room_picture"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/room_prompt"-->
        <!--android:gravity="start"-->
        <!--android:inputType="text"-->
        <!--android:layout_below="@+id/enter_tag_picture"-->
        <!--android:layout_toRightOf="@+id/enter_floor_picture" />-->


    <!--<Spinner-->
        <!--android:id="@+id/building_spinner"-->
        <!--android:layout_width="125dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/enter_tag_picture"-->
        <!--android:entries="@array/buildings_array"-->
        <!--android:prompt="@string/building_prompt"-->
        <!--/>-->

    <!--<Button-->
        <!--android:id="@+id/building_button"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_alignBottom="@+id/building_spinner"-->
        <!--android:layout_alignTop="@+id/building_spinner"-->
        <!--android:layout_alignRight="@+id/building_spinner"-->
        <!--android:layout_alignLeft="@+id/building_spinner"-->
        <!--/>-->

    <!--<Spinner-->
        <!--android:id="@+id/floor_spinner"-->
        <!--android:layout_width="125dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_toRightOf="@+id/building_spinner"-->
        <!--android:layout_below="@+id/enter_tag_picture"-->
        <!--android:prompt="@string/floor_prompt"-->
        <!--/>-->

    <!--<Button-->
        <!--android:id="@+id/floor_button"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_alignBottom="@+id/floor_spinner"-->
        <!--android:layout_alignTop="@+id/floor_spinner"-->
        <!--android:layout_alignRight="@+id/floor_spinner"-->
        <!--android:layout_alignLeft="@+id/floor_spinner"-->
        <!--/>-->

    <!--<Spinner-->
        <!--android:id="@+id/room_spinner"-->
        <!--android:layout_width="125dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_toRightOf="@+id/floor_spinner"-->
        <!--android:layout_below="@+id/enter_tag_picture"-->
        <!--android:prompt="@string/room_prompt"-->
        <!--/>-->

    <!--<Button-->
        <!--android:id="@+id/room_button"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_alignBottom="@+id/room_spinner"-->
        <!--android:layout_alignTop="@+id/room_spinner"-->
        <!--android:layout_alignRight="@+id/room_spinner"-->
        <!--android:layout_alignLeft="@+id/room_spinner"-->
        <!--/>-->


</RelativeLayout>
